--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,58 +1,41 @@
 ---
-title: 参议员瑞克·斯科特： 看看英特尔，一家美国公司，急不可耐向共产中国道歉,恶心
+title: 各方表示，德国的疫苗强制令可能需要几个月才能通过
 ---
-`美国政要直译推` [轉載自GNews](https://gnews.org/zh-hans/1845309/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/1845329/)
 
-参议员瑞克·斯科特： 看看英特尔，一家美国公司，急不可耐向共产中国道歉。恶心。 英特尔如何解释在赞助 2022 年北京奥运会的同时在国内支持“社会正义”？他们显然不介意双重职责来帮助共产主义中国粉饰种族灭绝。 【转推：指英特尔在一封给供应商的公开信中提到新疆的部分】
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-748.png)2022年1月8日，德国法兰克福一名参与者在反对新冠措施和强制接种的示威中举着横幅，上面写着“反对强制接种”。(Hannes P. Albert/dpa via AP)
+《美联社》1月9日报道，柏林——德国执政党正在叫停强制接种冠状病毒疫苗计划，称立法者可能需要几个月的时间才能在议会中适当辩论这项有争议的措施。
 
+11月，总理奥拉夫·朔尔茨（Olaf Scholz）曾预测“一项全面的疫苗强制令将于明年2月或3月初生效，现在每个人都可以做好准备。”
 
+反对疫苗强制令的人中，包括作为执政联盟一部分的自由民主党的一些成员，以及去年夏天承诺不引入全面疫苗强制令的德国前卫生部长。政治领导人已同意让立法者根据自己的良知，而不是党派路线对这个问题进行投票。
 
-> Look at [@intel](https://twitter.com/intel?ref_src=twsrc%5Etfw), a U.S. company, jumping to apologize to Communist China. Gross.
-> 
-> How does Intel explain supporting "social justice" at home while sponsoring the 2022 Beijing Olympics? They clearly have no issues with pulling double duty to help Communist China whitewash genocide. [https://t.co/k7UQ0WC12S](https://t.co/k7UQ0WC12S)
-> — Rick Scott (@SenRickScott) [January 10, 2022](https://twitter.com/SenRickScott/status/1480604202611220486?ref_src=twsrc%5Etfw)
+迫在眉睫的强制令也成为了参加反疫苗运动者集结起来的一个点，他们参加了反对德国对疫情限制措施的抗议活动。最近的一些示威活动已经演变成暴力事件，抗议者在被命令驱散后袭击了警察。
 
+卫生部长卡尔·劳特巴赫（Karl Lauterbach）表示，他不想猜测疫苗强制令何时会生效，但承认，以它阻止最新的高度传染性变种病毒的流行，可能为时已晚。他告诉公共广播公司德国公法广播机构联盟（ARD）：“通过强制接种疫苗，我们将无法真正有效地阻止我们现在正在经历的奥密克戎（omicron）大流行。”
 
+近72%的德国人被认为“完全接种了疫苗”，而42.3%的人接受了额外的疫苗强化针注射。德国疾病控制机构在过去24小时内，报告了36,552例新确诊的新冠肺炎病例，以及77例死亡病例。
 
-众议员迈克·沃尔兹： 当我们的国家面临来自阿富汗、伊朗、中共、俄罗斯、朝鲜和其他国家的威胁时，我们要时刻准备着，这至关重要。 很荣幸能成为共和党三军委员会下辖的武装准备委员会成员，来监督我们军队的训练，后勤等。
+**简评**：中共病毒已成为各政府侵蚀人民自由与权力的借口，疫苗强制令则是其实现阴谋的手段。为什么大范围疫苗接种后感染人数并没有明显改善？为什么不能保证安全、成分没被公开的疫苗，却要无论男女老幼强制接种？民众的身体被伤害而不自知，而敢于说不的人们则被噤声，或被标签成极端分子。经过1月6日美国国会山事件后，已经不能排除动机不纯伪装成抗议者的演员恶意挑起事端的可能性，而中共往往被发现扮演着幕后黑手的角色。
 
+新闻链接：[https://abcnews.go.com/Health/wireStory/parties-german-vaccine-mandate-months-pass-82161028](https://abcnews.go.com/Health/wireStory/parties-german-vaccine-mandate-months-pass-82161028)
 
+[https://apnews.com/article/coronavirus-pandemic-health-europe-germany-berlin-dbbc751badac470ebcff937ede42fdd1](https://apnews.com/article/coronavirus-pandemic-health-europe-germany-berlin-dbbc751badac470ebcff937ede42fdd1)
 
-> As our country faces threats from Afghanistan, Iran, the [#CCP](https://twitter.com/hashtag/CCP?src=hash&amp;ref_src=twsrc%5Etfw), Russia, North Korea, & others, it’s critical we're always ready.
-> 
-> Honored to serve as Ranking Member of the [@HASCRepublicans](https://twitter.com/HASCRepublicans?ref_src=twsrc%5Etfw) Readiness Subcommittee with oversight of our military's training, logistics & more. [https://t.co/FYFyL1L4DO](https://t.co/FYFyL1L4DO)
-> — Rep. Mike Waltz (@michaelgwaltz) [January 10, 2022](https://twitter.com/michaelgwaltz/status/1480598431634710536?ref_src=twsrc%5Etfw)
+翻译/简评：Dlrow
 
+PR：Julia Win
 
+* * *
 
-参议员兰德·保罗： 因此，如果您感染了 [#中共病毒](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92?src=hashtag_click)，您仍然可以在医院工作，但没有感染 [#中共病毒](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92?src=hashtag_click) 且未接种疫苗的医生和护士会被解雇。我是唯一一个意识到这种荒唐情况的人吗？ 【附abcnews的文章:卫生官员让感染 [#中共病毒](https://twitter.com/hashtag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92?src=hashtag_click) 的员工继续在医院工作】
-
-
-
-> So you can still work in a hospital if you have active COVID but doctors and nurses who don’t have COVID and are unvaccinated are fired. Am I the only one who perceives the absurdity of this scenario?[https://t.co/8vHumvcYoo](https://t.co/8vHumvcYoo)
-> — Senator Rand Paul (@RandPaul) [January 11, 2022](https://twitter.com/RandPaul/status/1480711614240337923?ref_src=twsrc%5Etfw)
-
-
-
-参议员卢比奥新闻办公室： 卢比奥:英特尔在向北京屈服后，不应该得到美国政府的芯片支持资金。 （转卢比奥官网声明）
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
+编辑：【英国伦敦喜庄园编辑部】
 
-> RUBIO: Intel should not get CHIPS funding from U.S. government after caving to [#Beijing](https://twitter.com/hashtag/Beijing?src=hash&amp;ref_src=twsrc%5Etfw).[https://t.co/0mN77T5KR1](https://t.co/0mN77T5KR1)
-> — Senator Rubio Press (@SenRubioPress) [January 10, 2022](https://twitter.com/SenRubioPress/status/1480680900694319115?ref_src=twsrc%5Etfw)
-
-
-
-国务卿布林肯： 中华人民共和国对美国国际宗教自由委员会四名成员的制裁，是中国对普世权利的又一次冒犯。对美国国际宗教自由委员会成员的制裁，不会隐藏或转移世界对中国在新疆侵犯人权和暴行的关注，包括正在进行的种族灭绝。
-
-
-
-> The PRC’s sanctions on four members of the U.S. Commission for International Religious Freedom constitute another PRC affront against universal rights.
-> — Secretary Antony Blinken (@SecBlinken) [January 10, 2022](https://twitter.com/SecBlinken/status/1480620087547678728?ref_src=twsrc%5Etfw)
-
-
-
-
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
