--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,20 +1,44 @@
 ---
-title: 深圳疫情源头甩锅到境外物品？
+title: 俄罗斯弗拉基米尔地区的代理州长感染了中共冠状病毒
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/1845099/)
+`纽约香草山MOS02` [轉載自GNews](https://gnews.org/zh-hans/1845115/)
 
-撰稿：追着曙光跑
+作者：香草山健身部 – 正道新闻
+![](https://cdn.discordapp.com/attachments/902205163622776852/923974543167590420/image0.jpg)
+***译者评论：**
+接种了中共冠状病毒疫苗后，一样被感染，不管你是官员还是富豪，冠状病毒疫苗是无效的，并且会带来疫苗灾难，导致心梗、心肌炎、心包炎和脑梗等。抵制疫苗，消灭中共这个罪魁祸首才是人类需要做的！*
 
-据深圳特区报1月10日的报道，在深圳市举行疫情防控新闻发布会上，健康委二级巡视员林汉城介绍，综合分析，深圳本次疫情为境外输入引起的本土疫情，暴露于境外新冠病毒污染物品引起感染的可能性大。
-![](https://assets.gnews.org/wp-content/uploads/2022/01/WhatsApp-Image-2022-01-11-at-10.47.56.jpeg)图片来源：网络
-然后网友的评论“可能？这说法能服众？”、“可能？这种问题能用可能吗？”、“意思是物传人?”等等。一个深圳速度检测，结果就把源头甩到了境外物品上，再一次玩弄了一把网民的智商。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/image-747.png)
 
-如果是物品，是从哪个国家进口的？运输途中花了多长时间？是哪批次的物品？这批物品都有谁接触了？发布会上都没有具体介绍。
+**译文：**
+1月10日，据《国际文传电讯社》报道，弗拉基米尔州代理州长亚历山大·阿夫杰耶夫说，他被诊断出患有中共冠状病毒。
 
-众所周知，病毒是人传人。如果是物传人的话，病毒没有宿主怎么传到人？何况进口物品在进关的时候都有进行表面消毒。作为权威的新闻发布会上，在没有详实的检验检疫的报告下，推断出疫情源头是“境外新冠病毒污染物品引起感染的可能性大”的结论，那么你们就是一本正经地胡说八道。要么知道这源头就是文贵先生爆料说的“这次疫情不是任何新的病毒，是疫苗”！
+“在新年周末结束时，我感到不舒服，发烧了。我做了PCR，中共冠状病毒检测呈阳性。”亚历山大周一在他的Instagram上写道。
 
-参考信息：[深圳疫情源头公布！可能与境外物品有关！](https://c.m.163.com/news/a/GTC9I4S40001899O.html?spss=newsapp)
+据他说，该病正在进行中，没有并发症。
 
+在本周，该地区的代理负责人正计划通过视频会议进行远程工作。
+
+早些时候，亚历山大报告说，他已经接种了中共冠状病毒疫苗。
+
+参考链接：[https://www.interfax.ru/russia/814500](https://www.interfax.ru/russia/814500)
+
+![](https://cdn.discordapp.com/attachments/873743101305430037/926527191443972196/2c3ff12a-1aad-413c-bcbf-f68f4a054055.jpg)
+
+**校对/发稿：童谣**
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK 香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场 Discord**](https://discord.gg/ChqXAHd)
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
