--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,48 +1,17 @@
 ---
-title: 文•贵天成——文贵先生谈“南普陀计划”（一）
+title: 【粤语配音】2022年1月10日：疫苗一定会停的
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1845287/)
+`MOS香港部` [轉載自GNews](https://gnews.org/zh-hans/1845324/)
 
-整理：BENJ1
-编辑：Kelly
+紐約香草山-香港部
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/01/4-14.png)配图 雅典娜设计组～614
+国内的到处都是传来这样那样的信息，灾难，共产党把中国人当牲口来管理，真的我觉得欧洲和美国的，牲口都比中国人幸福，没办法。
 
+这个国家已经到了这个时候，老百姓已经完全不知道什么叫人，人和畜生怎么分别了，现在是政治斗争，地方政府一切都是掩盖，都为了所谓的狗屁冬奥，中国老百姓从来不问，政府这么做合法吗？这样做对吗？他们为什么这么做？从来不会问的，这就是中国人，一点儿办法没有…可怜至极，从来没有想过政府从来不挣一分钱，所有的财富都是老百姓的，政府是给老百姓服务的，政府不是你的爹娘也不是你的主人，可是政府怎么对待中国老百姓的？新中国联邦人我们已经是保命没打疫苗，保财！很多人现在已经是发财了，报仇！收拾我们的人绝大多数已经全完蛋了，共产党已经半条命没了。
 
-郭文贵先生**2017**年**9**月**1**日视频
+我们接下来，新中国联邦和我们的同胞们，在消灭共产党以后，让我们有更多的时间更多的力量，客观地来面对大自然的力量和人类存在的来源和未来的去处和过上更加美好和超越人类，现在比较真实的生活，而不是超越现实，这就是人类科学和文明进步的一个必须发展的过程，那么现在共产党的整个代表了上帝，代表了神，代表了宇宙，“宇宙无穷大，地球是一粒沙”，你是沙中的一粒沙，我想干啥就干啥，它就是一帮流氓、一帮土匪，一切都为了它的统治，谁也没有想过，在他们统治的这种快感中，失去的是你的生命和你的家人，它绝对不是为了你好，它是在向别人秀肌肉，展示它的统治管理能力，服务它的内部的政治斗争，永远要记住，真假和善恶是最关键的，全世界印发钞票出来，他们股市往上涨，共产党搞了所谓8%的经济增长，它的股市是什么样子？香港股市是什么样子？香港的民生是什么样子？
 
-整个江家岌岌可危的时候，出现了一个巨大的颠覆性的事件，那就是在十八大前，李源潮等人和令计划搞了个内部的虚拟投票。这件事情让江泽民先生朱镕基总理等所有的中国前政治局、前常委感到了心寒。因为讲数、安排自己的利益和代表人没机会了！
-
-所以，这时候发生了一个绝密的会议，这个绝密的会议就是在南普陀发生的！在南普陀酝酿的后来发生的一系列事件，彻底改变了十八大。我和刘彦平先生对话视频当中有一段还没有播出，我未来会播。他讲：“当时是江泽民先生在十八大前后的薄熙来事件、令计划事件、以及新的常委班子上起到了定海神针的作用！”我是用他的话来告诉大家。
-
-这个会议是在哪儿发生的呢？南普陀！南普陀有三个最终的计划。（第一个）由孟建柱书记、孙力军，还有其他两个人执行颠覆性的计划，那就是从不喝酒的令计划的儿子令谷，被跟踪多天，最后采取了最简单的方式，让他出车祸！
-
-然后在胡锦涛到美国时，整个国内的政治局委员和常委马上开会，最后让胡锦涛下飞机没人接！到中南海以后马上被叫去西山开会。江泽民同志、朱镕基同志、所有的老常委几乎都在，正式决定调查令计划！然后李源潮搞虚拟投票不对！这就是十八大被彻底改变的根本原因！
-
-第二个计划就是金融控制计划，由王岐山和朱镕基的手下，策划了一系列的对中国的金融控制，彻底的要在江总书记、孟建柱书记领导下控制中国的金融，还有中国的情报机构，就是对中国下一步公检法进行了定义。由孟建柱书记作为政法委书记，由公安部长升为政法委书记，从过去的保住社会和老革命的安全改变为监国，当时决定了由习近平作为有交易的当总书记、当主席，由孟建柱书记作为监国，孟监国这个词就是这么来的。孟监国身边的几个人也进行了划分，同时决定了要拿掉谁，彻底垄断全国政法委。金融、政法进行了分割，王岐山要当常委、要当纪委书记，铲除一切当初背叛江家、背叛朱家的人，彻底控制中国金融。未来的总书记和主席如果不听话，那就用金融把他给拿下，因为中国金融出事，主席和总书记一定下台！
-
-政法委这边由曾庆红先生指定了郭声琨当部长，江泽民总书记指定了孟建柱当政法委书记，那就是说如果不听话，刀把子绝对不交！然后共同推出了范长龙、许其亮、房峰辉这些枪把子，彻底灭掉了张钦升，就是胡的这些人。这一系列的安排是让大家看到，为什么习主席他真的就是个傀儡！他不过是江家有条件安排的国家主席。在执行了杀令谷计划之后，所有的这些人只不过都是一个靶子而已。
-
-第三个计划就是控制习主席的计划。今天我在这里不讲，习主席的家人特别是彭丽媛女士的弟弟彭磊，你可以去了解一下，是谁在控制着你整个的、所有的行踪，你所有去的地方。是谁在北京交管局和公安部的交管局上，暗设了你们所有人行踪的电子地图，他们销不毁这证据的！只要彭磊你去查查公安部交管局、查一查北京市交管局特殊的设备上谁给你和你姐姐留下了电子地图的后门，你就知道了！
-
-习主席到协和医院，西边儿叫特区，也就是中央常委看病的地方，每次去看病都有什么特殊的安排？习总书记你让栗战书，丁薛祥去查查你就明白了。习总书记所有的病情、行踪、家人、核心人员的电子地图，百分百即时传给上海，由江绵恒先生收存。可以去查一查就知道了，不要听文贵说，看一看查一查，这都是由孟建柱和孙立军执行的。
-
-所有的习总书记的重大决策，以及你的想法和你想抓谁，或你不想抓谁，都由孟和上海沟通后再和王岐山沟通，进行协调。特别是协调完以后得到绵恒的批准，才可能去执行！而且所有的办这些大案要案当中，一系列专案组的证据、口录、笔录、证据都会一式多份，在上海、国外存放起来，而且所有涉及到习总书记家人和朋友的，过去的，全部被他们多处备份。这是为了什么？
-
-江家一定要控制习主席的！江家一定要控制所有的十九大常委，十九大常委的黑马是怎么出来的？只有习主席知道。
-
-任何一个人都会知道，政治局和常委，下个常委的政法委书记、公安部长、军委副主席、人民银行行长、管金融的副总理，哪一个习主席控制不住，习主席都有巨大的危险。习主席是他们所有人尝试着必须控制的人物！
-
-如果习主席选择和他们合作、配合，那我们未来很快会看到，江家的利益、朱家的利益、王岐山的利益、孟建柱的利益、孙立军的利益，和他们过去涉嫌的犯罪和盗国的财富，只能是越来越多。更多人会被灭口，更多的人被抓，以反腐的名义，以黑反腐，以警反腐。网络之墙会越来越高，中国的维稳经费会越来越高。
-
-发布：tianzhihuan
-
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+接下来我相信这周或下周之间，美国欧洲关于疫苗问题的合法性，在法律上、媒体上，医学上会有重大突破，一定会停的！
 
  
 
