--- a/gnews/33.md
+++ b/gnews/33.md
@@ -1,15 +1,15 @@
 ---
-title: 七哥谈爆料革命的力量（2022-01-07摘录）
+title: 七哥说共产党的骨灰变成了人类文明的肥料（2022-01-07摘录）
 ---
-`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1844750/)
+`MG FARM` [轉載自GNews](https://gnews.org/zh-hans/1844860/)
 
 文编：Hima
 听写：叮叮
 视频：七哥
 
-来源：郭先生2022-01-07直播09：16：56摘录
+来源：郭先生2022-01-07直播09：19：26摘录
 
-为什么？我再说一遍，共产党这次它不知道，过去的流氓手段在今天的互联网世界不管用了。他没有想到，他想绑架全世界的做法，他成就了人类上再一次，在互联网文明之后，太空文明、新科技、5G、AI、新金融，特别是数字货币。我昨天下午跟咱们的Gettr Pay的某个超级背后的牛人开会，从来上来就没说过好话过，跟我聊没说过好话。这个人一直跟我一个人联系，从来不和任何人联系。这个人绝对是人类上的未来数字货币大佬中的大佬，我就不说那么多。有一天他站出来，绝对震惊世界。他昨天就说句话，他说：“Miles，我必须要给你夸个奖、点十个赞，喜联储、喜币到今天这个价格，他说是你没想到，我也没想到，涨400倍，” 他说：“我也没有想到你们的战友这么牛叉，说锁币就锁币了，说交就交。昨天是6万多个交易额，就是交易额下来了，但是我看到了你这个喜币完全不一样。”他说：“我现在我看到香港的时候、看到大陆的时候，共产党根本不是你的对手。” 他从来不认为我能消灭共产党，从来不会！他说：“Miles，你干啥我都相信。你说你灭掉共产党，我绝对不相信，” 他说：“不是你的能力问题，是根本不可能！这个世界太贪婪，没人敢灭掉共产党。” 这是个人类上巨大的英雄，就像看电影当中，像我这样带着个帽子，最后1分钟儿，一咳嗽，江湖就停止那种大佬。七哥就有这背后的高人，我才一次次敢自信说，你们不了解爆料革命的力量。
+我真的眼睛这两天把水流的，为什么？我大概从1991年之后，我从来没见过我八弟照片，从来没见过。我这是前天，我的一个老师珍藏了我一个儿时，我大概八岁的时候照的一张照片，八岁或九岁照的照片，是我八弟和我一起照的照片。这个照片当中，当时就是我八、九岁的时候，七哥是处男之前，这是唯一的照片。还有另外一张，是我和我一个发小照的照片，当时我还踩着那个东北的划着脚划子，当年在东北我记得大概在11月、12月的时候，零下35到40度的时候，我站在那儿穿着那个夹克衣裳，擤大鼻涕的那种，锃亮那种。我几十年，四十来年没看过我那时候照片。这两张照片对我感触太深了，就控制不住的流水、眼泪啊。哎呀，我是这几天就想人生啊，真是40几年前，当时我的八弟，还有我当时的样子，和当时的赵家沟。我在同时和着世界上数字货币的大佬、创始人通话，然后谈论灭掉共产党、拯救全人类。你说这人格得多分裂，你还能受得了，是吧？满大鼻涕的郭七儿，当年八、九岁，踩着脚划子，照着这么两张相。然后旁边儿的弟弟已经没了。这位大师跟我说：“为啥我要给你点赞呢？” 他说：“可以告诉你，香港和大陆的房地产，还有香港的股票市场，” 他说：“他们所有的数据我都知道。他从过去的7%到11%的造价，现在已经达到35%，说明他们真完了。” 他说：“在最后，所有数字货币，包括比特币成零的时候，只有喜联储，成为世界最牛的，包括你的Gettr Pay。不是这个数字货币牛，是你重新书写了数字货币的游戏规则。”兄弟姐妹们，共产党的房地产将成就人类上第二次最大的金融形势的存在。他死之前给人类留下了最后一点贡献，把他的骨灰变成了人类文明的肥料，那就是成就了数字货币。“唔该晒啦”，我就说到这儿吧。
 
 校对：HimaFaFA
 发布：HimaBoy
