--- a/gnews/34.md
+++ b/gnews/34.md
@@ -1,49 +1,49 @@
 ---
-title: 引用Graphika将爆料革命等同美国右翼的套路—Vice采访郭文贵先生系列之六
+title: 投资喜币有保证，耐心等待已是传奇的喜币腾飞
 ---
-`秘密翻译组-原创组` [轉載自GNews](https://gnews.org/zh-hans/1843770/)
+`YALUN 亚伦` [轉載自GNews](https://gnews.org/zh-hans/1844848/)
 
-整撰：奔跑吧黄小鸭
-![](https://assets.gnews.org/wp-content/uploads/2022/01/Picture1-4.png)图片来源：https://graphika.com
-Vice在节目中采用了Graphika的报告称，“郭文贵和他的网络与美国右翼势力紧密联系在一起，表明那些人从相同类型的社交媒体获取信息，他们是在和同一批人打交道，郭文贵的影响力到底如何？已确认1000多个机构和组织有成千上万的关注量，更让人担心的是郭文贵媒体网络成员的倾向性，他们获得了网上广泛传播的信息，并在线下根据这些信息行动，多次造成了发生在现实世界的暴力事件……”
+新西兰伊甸农场Gnews组 财经G乐部-亚伦
 
-维基百科上显示Graphika是一家私人情报公司，由约翰-凯利博士（Ph.D. John Kelly）2013年创立，并任职公司首席执行官至今。Graphika自称在分析在线社交网络如何形成、演变和操纵方面是世界上最好的。
+1月9日，郭文贵先生于GTV、Gettr大直播中给国内的喜币（Hcoin）投资人提出了投资建议和三条保证，并透露，没有一个数字交易所可以在开市两个月跻身到世界前五大，除了喜交所。
 
-Graphika暂露头角应该是在2020年9月，它的网页上发表了一份关于Peacedata网站的调查报告，报告指出Peacedata网站涉嫌俄罗斯影响美国2020年总统大选。尽管根据该报告显示，该Peacedata网站只有大约5%的英语内容与美国大选有关，但因报告出具”该行动的这一方面表明试图建立左翼受众并将其引离拜登的竞选活动”的结论，Facebook迅速删除了Peacedata网站。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/Slide3-5-1.jpeg)图片来源Gnews
 
-**Graphika与斯坦福互联网天文台（SIO）、华盛顿大学知情公众中心（CIP）、大西洋理事会的数字取证研究实验室（DFRLab）一起合作参与2020年选举诚信项目Eipartnership（**[**EIP**](https://www.eipartnership.net/)**）**，这是一项自称是专注于研究社交媒体领域中有关的错误和虚假信息，为联邦政府、国会、州和地方官员以及社交媒体平台等提供和传达数据的紧急集体行动。**根据EIP的说法，因为网上误导性和虚假的主张和叙事融合成”偷来的选举”的说法，推动了2020年1月6日美国国会的暴乱。**
 
-EIP给出的论点是：2020年大选表明，（美国）国内外行为者仍然致力于将病毒式的虚假和误导性叙事武器化，以破坏对美国选举制度的信心，并侵蚀美国人对我们民主的信心。在整个竞选、选举及其后果中，错误和虚假信息无处不在，并在所有社交平台上传播。
 
-**Graphika同时还参与了病毒项目**，该项目的合作联盟最终打算”减轻叙事的影响，否则会破坏公众对疫苗安全性的信心”。它还将”减轻”对那些”反对疫苗接种要求的人”的”政府过度干预”。该项目的资金来自基金会和外部赠款。（该病毒项目的公开信息十分有限）
+根据最新的统计显示，最近喜交所绝大部分的喜币都是由刚刚通过KYC账户审核的新投资人购买的。但对国内投资人郭先生再度重申，千万不要使用国内银行汇款去投资喜币，否则十有八九会被中共警察找上门。本着宁可不投资喜币，也不要给自己惹麻烦的投资原则。一定要在有汇款安全、有汇款保证的前提下去参加喜账户的KYC。关于如何通过KYC开通喜账户，国内的战友可以找日本方舟农场、银河农场、樱花农场，韩国天池农场和新加坡农场等帮忙。
 
-维基百科上引用了一段批评者的文字，**“谁资助Graphika？他们的风险投资是在2014年和2019年私下筹集的，分两期筹集，每批约300万美元。”**
+尤其针对国内投资喜币的战友，郭先生提出负一切责任的三条保证：
 
-批评者还指出，目前Graphika的“创新官”是卡米尔·弗朗索瓦（Camille François），她曾在谷歌Google的分析分支Jigsaw工作，辞职后参与了美国参议院情报特别委员会（Us Senate Select Committee on Intelligence）运营一个秘密项目。她与Graphika的约翰-凯利博士并肩作战，他们在2018年12月的报道帮助”证明”了俄罗斯人如何利用Facebook和Twitter等社交媒体网络来影响2016年大选。
+第一、保证任何人的个人信息不会被泄露；
 
-此外，**Graphika还与五角大楼的国防高级研究计划局（DARPA）和国防部的密涅瓦计划有联系**。
+第二、保证在任何情况下，中共拿不走战友的一个币；
 
-批评者还说，“他们（Graphika）只是擅长证明俄罗斯的东西，或者因为他们与企业、准政府机构和情报界联系在一起……Graphika工作中缺少的是任何证据，证明对唯一重要的事情有任何实际影响：人们如何投票……”
+第三、保证投资喜币只赚不赔，若赔钱由郭先生负责。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/H-2.jpg)图片来源Gettr
 
-Vice采用的这份 Graphika报告共 35页，题为“解密郭文贵的网上爆料革命”，报告指出由相互关联的多个媒体实体组成了郭文贵和庞大的网络中心，Graphika认为郭文贵是整个网络的关键人物，是主导者，报告称该网络不仅制造和传播错误和虚假信息，包括在美国的选民欺诈、关于Covid-19的虚假信息以及QAnon的言论。郭文贵还与川普的前战略师史蒂夫·班农联系紧密，并普遍活跃在右翼社交媒体，甚至在网上和线下推动了对中共持不同政见者的骚扰活动，这些活动与多起暴力事件有关。
 
-报告中说，“在2020年6月4日……”新中国联邦 “这一短语在推特上被提及52.8万次”。将影响力量化是Graphika的强项，但报告却用不少的篇幅引用BBC的报道和中共外交部的说法，介绍郭文贵是被中共当局发红通要求遣返的中国流亡富商。并借用《华盛顿邮报》、《华尔街日报》等媒体的一些报道，力证班农与“郭媒体网络”之间的关系。一份采用不具备法律效力的媒体消息作依据的报告，Graphika出具的目的是什么？其衡量的标准又是什么？
+喜币从上市到今天两个多月的时间，创造的神奇已经举世瞩目。所有人、包括机构投资者做梦都不曾敢想的，喜币自上市已经涨了300-400倍（最高时近500倍）。要知道，根据当时的预估，喜币价值最多可以达到1-5美元。最重要的，机构投资者做梦也没想到拿到福利币的战友们（绝大多数）能在最短的时间内集体快速行动，配合完成针对福利币的锁币（如果福利币可以随便套现，喜币的价值将很快砸至5-10美元）。但是，由于大多福利币被锁，喜币价值随时可能突破50美元、甚至100美元。以至于现在面临的烦恼是，是否该放机构投资者入场。即便目前机构投资者进入资金池的资金量还不够，但足以把目前市场中流通的喜币，分分钟推高到1000美元-2000美元一个。当一个喜币价值1000美元的时候，总市值就是1万亿美元，但最起码需要100亿美元-1000亿美元的现金在市场上流通。
 
-**2019年1月27日，中共大外宣CNBC对Graphika的创新官有过一篇报道，卡米尔对记者说，”如果你有一个非常强大的衡量框架，并研究一个协调的、人为的营销活动结构，那就是你可以……识别这些模式。”**可以理解为，Graphika针对调查对象所依据的衡量标准来自自身及其背后的服务对象。
+不但如此，喜支付（Hpay）系统马上就要上线，支付系统的上线才是喜币价值真正腾飞的开始。
 
-Graphika出具该报告的时间是2021年5月17日，就在同一天，《华盛顿邮报》刊登题为“研究人员表示，与史蒂夫·班农有联系的中国商人是庞大虚假信息网络的推动力”的报道，Dailymail、Mediawell、Election Law Blog等多家媒体也都在当天登出了标题和内容几乎一致的文章。
+接下来随着当喜支付系统的上线，通过喜支付系统被广泛的推广和大规模的普及，大投资机构所提供的估值就会水涨船高，继而投入到喜交所的资金也就会越多。
 
-是到直面邪恶的时候了！在Vice的多次请求下，郭文贵先生同意在5月18日接受采访。2021年9月3日，Graphika发布一份新的报告：“郭文贵借用反疫苗战术推广新 “神药”——青蒿素“。（未完待续）
+持有喜币就像灭共一样，是一个积累的过程，更是一个信仰，也是对能否拥有这份财富最重要的心理和智慧的考验。
 
-参考链接：
 
-[Graphika](https://wikispooks.com/wiki/Graphika)
 
-[The Long Fuse: Misinformation and the 2020 Election.](https://www.eipartnership.net/)
 
-[This former Google exec talked to the social media trolls the Russians paid to influence elections — here’s what she learned](https://www.cnbc.com/2019/01/27/ex-google-exec-camille-francois-russian-trolls.html)
 
-发布：Shifter
+**相关Gnews：**
+
+万千宠爱在一身，喜币将是数字货币的规则制定者和开拓者
+
+
+
+> [万千宠爱在一身，喜币将是数字货币的规则制定者和开拓者](https://gnews.org/zh-hans/1806152/)
+
+
 
  
 
