--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,25 +1,9 @@
 ---
-title: 中共把未来58年的韭菜全割完了
+title: 1/09/2022 文贵直播：毛泽东死后，曾庆红是唯一代表中共去昆仑山祭拜的人
 ---
-`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1845196/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1845236/)
 
-房子是什么概念？房子把你58年能挣的工资已经提前给你剥削走了。不但让你58年要付这个房子的房贷，让你的儿子、孙子都58年(要付房贷)
-
-**【郭先生直播摘要】**** 2022.1.5 ****中共把未来****58****年的韭菜全割完了**
-
-**郭先生：**
-
-那么我们今天看世界的经济，和房地产的时候，你知道意味着什么？  兄弟姐妹们？
-
-我告诉你，共产党会让你，一定(要)记住刚才你们谈“菜篮子” 、谈房地产价格的时候，共产党想啥，你们一定要懂得，他们永远说  叫什么？“菜篮子”工程，就什么时候不保  我也得保你吃饭吃得起、吃菜吃得起，我让你饿不死  吃草能吃得起。你所有你挤出的是奶，换回来的是草，也就是青菜，青菜和草有什么区别？  不就是能吃不能吃吗？但是肉你会逐渐减少。
-
-房子是什么概念？房子把你58年能挣的工资，已经提前给你剥削走了，不但让你58年要付这个房子的房贷，让你的儿子、孙女都58年。我让你死不了，永远为我打工。第二个房地产现在意味着什么？  战友们知道吗？共产党所有的房地产，几乎把所有中国人未来58年的韭菜全割完了。它一定保住，不能让你倒，但是它绝对不允许把房地产变成你真有钱，就你可以兑现  你可以对外流通，那是对它来讲是噩梦。因为它是个泡沫嘛，所以对中国的房地产的控制  ，就是控制中国人的整个未来。
-
-这就是刚才唐平还记着，非常重要的刚才(昔马)千羽讲的，这就是商鞅“弱民五术”最核心的，让你忙！让你穷忙 ，让你忙疯。永远不去思考，让你永远不去面对你的问题。房地产、车  让你忙一辈子的，包括咱傻的穷人要买保险，穷人要买未来了，想买教育，都得给你干掉。现在中国是什么？不允许知道外面，不允许了解外面，不允许接触国际教育。
-
-不允许学英文，不允许知道基督，不允许知道耶稣，知道什么？让你住在房子里老老实实地打工，你们不用谈菜价和肉价 。兄弟姐妹们，我可以告诉你  在共产党倒闭之前，国内的菜价、粮食价、肉价，几乎不会暴涨，但房价不会大跌，只有房地产下来爆破，共产党就灭亡，就这么简单。共产党现在护的房地产盘，就是护的它自己的安全和未来。护的它的“菜篮子”盘子 ，就是护着它的未来，这是为什么共产党把全世界的粮食，62%的粮食全买进去了，因为它知道老百姓真没得吃，真跟他玩命。
-
-视频剪辑：小蜜蜂 | 听写：中年少女 | 翻译 ：中年少女| 校对：Polaris |视频制作+字幕：刀锋舞者 | 编辑&发布：断播
+秘密翻译组-北美组
 
  
 
