--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,32 +1,25 @@
 ---
-title: 俄罗斯警告美国可能作出军事反应
+title: 中共把未来58年的韭菜全割完了
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/1845176/)
+`喜马拉雅-华盛顿DC农场` [轉載自GNews](https://gnews.org/zh-hans/1845196/)
 
-**【雅典娜快讯】，紧贴时事脉搏**
+房子是什么概念？房子把你58年能挣的工资已经提前给你剥削走了。不但让你58年要付这个房子的房贷，让你的儿子、孙子都58年(要付房贷)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/军人.png)图片来源：newspunch.com
+**【郭先生直播摘要】**** 2022.1.5 ****中共把未来****58****年的韭菜全割完了**
 
-**编译报道：Lish**
+**郭先生：**
 
-周一，俄罗斯外交部副部长谢尔盖·里亚布科夫（Sergey Ryabkov）警告他的美国同行，未来可能会对美国在欧洲驻扎先进武器的行为做出某种形式的军事反应。
+那么我们今天看世界的经济，和房地产的时候，你知道意味着什么？  兄弟姐妹们？
 
-他坚持认为，如果北大西洋公约组织朝着部署新武器装备能力的方向发展，俄罗斯军队可能将会以一种 “不可避免地损害美国及其欧洲盟友安全 “的方式作出回应。”
+我告诉你，共产党会让你，一定(要)记住刚才你们谈“菜篮子” 、谈房地产价格的时候，共产党想啥，你们一定要懂得，他们永远说  叫什么？“菜篮子”工程，就什么时候不保  我也得保你吃饭吃得起、吃菜吃得起，我让你饿不死  吃草能吃得起。你所有你挤出的是奶，换回来的是草，也就是青菜，青菜和草有什么区别？  不就是能吃不能吃吗？但是肉你会逐渐减少。
 
-在美国和俄罗斯在日内瓦就安全保障问题进行了一天的关键性谈判之后，里亚布科夫在接受媒体采访时还表示，迄今为止，俄罗斯关于遏制北约扩张的建议没有任何进展。他说现在球在北约的法庭上，用他的话说，北约必须最终在找到与俄罗斯的共同点上迈出 “真正的一步”。
+房子是什么概念？房子把你58年能挣的工资，已经提前给你剥削走了，不但让你58年要付这个房子的房贷，让你的儿子、孙女都58年。我让你死不了，永远为我打工。第二个房地产现在意味着什么？  战友们知道吗？共产党所有的房地产，几乎把所有中国人未来58年的韭菜全割完了。它一定保住，不能让你倒，但是它绝对不允许把房地产变成你真有钱，就你可以兑现  你可以对外流通，那是对它来讲是噩梦。因为它是个泡沫嘛，所以对中国的房地产的控制  ，就是控制中国人的整个未来。
 
-“我们呼吁美国在此刻能表现出最大的责任感。不应低估与可能增加的对抗有关的风险，”里亚布科夫说，并补充说已作出 “重大 “努力，说服美国人 “玩火 “不符合他们的利益。
+这就是刚才唐平还记着，非常重要的刚才(昔马)千羽讲的，这就是商鞅“弱民五术”最核心的，让你忙！让你穷忙 ，让你忙疯。永远不去思考，让你永远不去面对你的问题。房地产、车  让你忙一辈子的，包括咱傻的穷人要买保险，穷人要买未来了，想买教育，都得给你干掉。现在中国是什么？不允许知道外面，不允许了解外面，不允许接触国际教育。
 
-参考链接：[Russia warns US of possible military response — RT Russia & Former Soviet Union](https://www.rt.com/russia/545624-moscow-warns-washington-confrontation/)
+不允许学英文，不允许知道基督，不允许知道耶稣，知道什么？让你住在房子里老老实实地打工，你们不用谈菜价和肉价 。兄弟姐妹们，我可以告诉你  在共产党倒闭之前，国内的菜价、粮食价、肉价，几乎不会暴涨，但房价不会大跌，只有房地产下来爆破，共产党就灭亡，就这么简单。共产党现在护的房地产盘，就是护的它自己的安全和未来。护的它的“菜篮子”盘子 ，就是护着它的未来，这是为什么共产党把全世界的粮食，62%的粮食全买进去了，因为它知道老百姓真没得吃，真跟他玩命。
 
-*发布： 盘古相聚*
-
-**更多资讯，请关注：****
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
-[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
-[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
-[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
+视频剪辑：小蜜蜂 | 听写：中年少女 | 翻译 ：中年少女| 校对：Polaris |视频制作+字幕：刀锋舞者 | 编辑&发布：断播
 
  
 
