--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,7 +1,7 @@
 ---
-title: 1/14/2021 文贵直播：中共已失去金钱勾兑的能力！
+title: 1/14/2021 文贵直播：中共体育界在冬奥会后将发生大事，李永波必被抓，这将牵扯出无数个彭帅的故事
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1861440/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1861462/)
 
 秘密翻译组-北美组
 
