--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,9 +1,9 @@
 ---
-title: 1/15/2022 文贵直播：请战友们务必小心，千万不要染上病毒！
+title: 数字货币和喜币喜联储将彻底改变人类的金融生态系统
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1865950/)
+`G-NEWS TAIWAN` [轉載自GNews](https://gnews.org/zh-hans/1865995/)
 
-秘密翻译组-北美组
+台灣寶島農場
 
  
 
