--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,7 +1,7 @@
 ---
-title: 1/17/2022 文贵直播：文贵7岁时跟八弟拍的照片背后有什么故事
+title: 1/17/2022 文贵直播：文贵以家人的命、鲜血、自由和财富换来个人的觉醒，让文贵今天带着全人类开始灭共！
 ---
-`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1878019/)
+`秘密翻译组-北美组` [轉載自GNews](https://gnews.org/zh-hans/1878075/)
 
 秘密翻译组-北美组
 
