--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,9 +1,9 @@
 ---
-title: 中国人应该活出自信
+title: 不反对疫苗反对假疫苗
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1878972/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879052/)
 
-#### 编辑/整理：澳雅大直播工作组视频剪辑小队
+##### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
 
 ```
