--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,7 +1,7 @@
 ---
-title: 国内房地产无法延续
+title: 房地产很难套现大陆钱都跑了
 ---
-`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879171/)
+`雅典娜GNotes` [轉載自GNews](https://gnews.org/zh-hans/1879319/)
 
 #### 编辑/整理：澳雅大直播工作组视频剪辑小队
 
